chore: add 500 error code, fixed orders logic, orm adnotation fixes, role logic change
